fix un peu seulement le pb responsive memory + retirer ancienne class memory-hidden + classement visible / invisible + funcion startGuessTheWebtoon

--- a/STYLES/mini-jeux.css
+++ b/STYLES/mini-jeux.css
@@ -192,10 +192,6 @@ h1 {
     z-index: 1;
 }
 
-.memory-hidden {
-    display: none !important;
-}
-
 
 /* Conteneur commun pour stats, sélecteur et toggle */
 #memory-controls {
@@ -345,6 +341,8 @@ h1 {
     padding: 8px;
     cursor: pointer;
     transition: all 0.2s ease;  /* transition fluide progressive de 200ms de #toggle-sound:hover */
+    align-self: center;    /* reste centré sous le plateau */
+    margin-top: 0.75rem;
 }
 
 #toggle-sound svg {
@@ -693,7 +691,7 @@ h1 {
 /* RESPONSIVE : réduit la plateforme sur mobile */
 
 /* (Media query) = condition CSS qui dit que si la largeur de l'écran est < 600px (smartphones en moyenne entre 360 - 414), ce bloc CSS s'applique */
-@media (max-width: 600px) {
+@media (min-width: 10px) and (max-width: 949px) {
     body {
         padding: 1rem; /* ou même 0.5rem si c’est très petit */
     }
@@ -749,17 +747,5 @@ h1 {
         height: auto;          /* la hauteur s’ajuste à son contenu */
         gap: 6px;
     }
-
-    /* 5) Bouton toggle sound */
-    #toggle-sound {
-        align-self: center;    /* reste centré sous le plateau */
-        margin-top: 0.75rem;
-    }
 }
-
-
-
-    
-
-
 
